--- a/backend/backend/appsettings.json
+++ b/backend/backend/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=postgres;Database=appdb;Username=postgres;Password=yourpassword"
+},
   "Logging": {
     "LogLevel": {
       "Default": "Information",
