--- a/backend/backend/appsettings.json
+++ b/backend/backend/appsettings.json
@@ -1,12 +1,17 @@
 {
   "ConnectionStrings": {
     "DefaultConnection": "Host=postgres;Database=appdb;Username=postgres;Password=yourpassword"
-},
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Key": "JdF9YJ2lOqYt6FbQ+gVPMxzEJY0lD6bBtN8YyQhDgEw=",
+    "Issuer": "UrbanPulseAPI",
+    "Audience": "UrbanPulseFrontend"
+  }
 }
