--- a/backend/backend/backend.csproj
+++ b/backend/backend/backend.csproj
@@ -22,6 +22,7 @@
         <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.10.0" />
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
         <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.10.0" />
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.0" />
     </ItemGroup>
 
 </Project>
